# lang-segment-anything

./: __init__.py  lang_sam.py  pyproject.toml  requirements.txt
