[tool.poetry]
name = "lang-sam"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch
huggingface-hub
numpy
opencv-python
Pillow
transformers


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
